[project]
name = "q"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["qiskit[visualization]>=2.1.2", "qiskit-aer>=0.17.1", "matplotlib>=3.10.6"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
